<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.wgbn.pw_20160219_criando_atividades.AtividadePrincipal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/informe_nome"
        android:id="@+id/txtNome" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtNome"
        android:layout_below="@+id/txtNome"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/informe_idade"
        android:id="@+id/txtIdade"
        android:layout_below="@+id/edtNome"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtIdade"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtIdade"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_carregar1"
        android:id="@+id/btnCarrega"
        android:layout_below="@+id/edtIdade"
        android:layout_alignParentStart="true"
        android:onClick="BtnCarregarClick"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_carregar2"
        android:id="@+id/btnCarrega2"
        android:layout_below="@+id/btnCarrega"
        android:layout_alignParentStart="true"
        android:onClick="BtnCarregar2Click"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_carregar3"
        android:id="@+id/btnCarrega3"
        android:layout_below="@+id/btnCarrega2"
        android:layout_alignParentStart="true"
        android:onClick="BtnCarregar3Click"/>

</RelativeLayout>
